crates/solidity/testing/snapshots/bindings_output/using/global_multi_file/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[ main.sol:7:1 ]
    │
  7 │ ╭─▶ using Lib for uint;
    ┆ ┆   
 20 │ ├─▶ 
    │ │      
    │ ╰────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
   ╭─[ main.sol:1:1 ]
   │
 1 │ import {foo} from "other.sol";
   │         ─┬─  
   │          ╰─── name: 1
   │ 
 3 │ library Lib {
   │         ─┬─  
   │          ╰─── name: 2
 4 │     function nop(uint x) public {}
   │              ─┬─      ┬  
   │               ╰────────── name: 3
   │                       │  
   │                       ╰── name: 4
   │
   ├─[ main.sol:1:1 ]
   │
 1 │ import {foo} from "other.sol";
   │         ─┬─  
   │          ╰─── unresolved
───╯
[39mDefiniens:[0m 
   ╭─[ main.sol:1:1 ]
   │
 1 │ │   import {foo} from "other.sol";
   │ │           ─┬─  
   │ │            ╰─── definiens: 1
 2 │ ╭─▶ 
   ┆ ┆   
 5 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 2
   │
   ├─[ main.sol:1:1 ]
   │
 4 │     function nop(uint x) public {}
   │ ─────────────────┬──┬──────────────  
   │                  ╰─────────────────── definiens: 3
   │                     │                
   │                     ╰──────────────── definiens: 4
───╯
Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[ other.sol:1:1 ]
   │
 1 │ ╭─▶ function foo(uint a) pure returns (uint) {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
[39mDefiniens:[0m 
